--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 bcrypt==3.1.7
+certifi==2020.6.20
 cffi==1.13.2
+chardet==3.0.4
 Click==7.0
 cryptography==2.8
 Flask==1.1.1
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
@@ -11,5 +14,7 @@ pkg-resources==0.0.0
 pycparser==2.19
 PyNaCl==1.3.0
 PyYAML==5.3
+requests==2.24.0
 six==1.14.0
+urllib3==1.25.9
 Werkzeug==0.16.1
