--- a/kubernetes/ecoman.yaml
+++ b/kubernetes/ecoman.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: dep-ecoman
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: ecoman
@@ -14,13 +14,14 @@ spec:
     spec:
       containers:
         - name: ecoman-container
-          image: tomoyk/ecoman:v1.0
+          image: tomoyk/ecoman:v1.0.8
           volumeMounts:
             # From file
             - name: secret-volume
               mountPath: /config
+              readOnly: true
           ports:
-            - containerPort: 3300
+            - containerPort: 3301
           env:
             # From literal
             - name: SLACK_WEBHOOK
@@ -29,25 +30,30 @@ spec:
                   name: ecoman-secret-vars
                   key: slack-webhook
                   optional: true
+            - name: HOSTS_PATH
+              value: /config/hosts.yaml
       volumes:
         - name: secret-volume
           secret:
             secretName: ecoman-secret-config
             items:
-            - key: ../hosts.yaml
+            - key: hosts.yaml
               path: hosts.yaml
               mode: 0400
+      dnsPolicy: Default
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: svc-ecoman
 spec:
-  type: ClusterIP
+  # type: ClusterIP
+  type: NodePort
   ports:
     - name: "http-port"
       protocol: "TCP"
       port: 3310
-      targetPort: 3300
+      targetPort: 3301
+      nodePort: 30031
   selector:
     app: ecoman
