--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,30 @@
-bcrypt>=3.1.7
-certifi>=2020.6.20
-cffi>=1.13.2
-chardet>=3.0.4
-Click>=7.0
-cryptography>=3.3.2
-Flask>=1.1.1
-idna>=2.10
-itsdangerous>=1.1.0
-Jinja2>=2.11.3
-MarkupSafe>=1.1.1
-paramiko>=2.7.1
-pycparser>=2.19
-PyNaCl>=1.3.0
-PyYAML>=5.4
-requests>=2.24.0
-six>=1.14.0
-urllib3>=1.26.5
-Werkzeug>=0.16.1
+anyio==3.6.1
+asgiref==3.5.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
+dnspython==2.2.1
+email-validator==1.2.1
+fastapi==0.78.0
+h11==0.13.0
+httptools==0.4.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+orjson==3.6.8
+pydantic==1.9.1
+python-dotenv==0.20.0
+python-multipart==0.0.5
+PyYAML==6.0
+requests==2.27.1
+six==1.16.0
+sniffio==1.2.0
+starlette==0.19.1
+typing_extensions==4.2.0
+ujson==5.3.0
+urllib3==1.26.9
+uvicorn==0.17.6
+uvloop==0.16.0
+watchgod==0.8.2
+websockets==10.3
