--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 anyio==3.6.1
 asgiref==3.5.2
+bcrypt==3.2.2
 certifi==2022.5.18.1
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.3
+cryptography==37.0.2
 dnspython==2.2.1
 email-validator==1.2.1
 fastapi==0.78.0
@@ -13,7 +16,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 orjson==3.6.8
+paramiko==2.11.0
+pycparser==2.21
 pydantic==1.9.1
+PyNaCl==1.5.0
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
