--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     ports:
       - "3000:8000"
     environment:
-      - MONGO_HOST=mongo
+      HOSTS_PATH: "/work/hosts.yml"
+      SLACK_WEBHOOK: ""
     depends_on:
       - mongo
   mongo:
