--- a/hosts.yml.example
+++ b/hosts.yml.example
@@ -1,5 +1,7 @@
 hoge:
   addr: 'hoge.a910.tak-cslab.org'
   username: 'root'
-  password: 'kj;fdskfa;sd'
+  identity_file_path: "ssh/id_rsa"
   datastore_path: '/vmfs/volumes/datastore1/'
+  installer_iso_path: "/vmfs/volumes/datastore1/os-images/ubuntu2004.iso"
+  network_port_group: "Management Network"
