--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,36 +1,5 @@
-anyio==3.6.1
-asgiref==3.5.2
-bcrypt==3.2.2
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.1.3
-cryptography==37.0.2
-dnspython==2.2.1
-email-validator==1.2.1
-fastapi==0.78.0
-h11==0.13.0
-httptools==0.4.0
-idna==3.3
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.1
-orjson==3.6.8
-paramiko==2.11.0
-pycparser==2.21
-pydantic==1.9.1
-PyNaCl==1.5.0
-python-dotenv==0.20.0
-python-multipart==0.0.5
+pymongo==4.1.1
 PyYAML==6.0
-requests==2.27.1
-six==1.16.0
-sniffio==1.2.0
-starlette==0.19.1
-typing_extensions==4.2.0
-ujson==5.3.0
-urllib3==1.26.9
+fastapi==0.78.0
 uvicorn==0.17.6
-uvloop==0.16.0
-watchgod==0.8.2
-websockets==10.3
+Jinja2==3.1.2
