--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.9-slim-buster
 WORKDIR /work
 SHELL ["/bin/bash", "-c"]
 
-COPY *.py library/ /work/
+COPY *.py requirements.txt /work/
 
 RUN apt update -y && apt install build-essential -y
 RUN pip install -r requirements.txt
