--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,13 +1,12 @@
 FROM python:3.9-slim-buster
 
-WORKDIR /work
 SHELL ["/bin/bash", "-c"]
 
-COPY requirements.txt *.py library/ /work/
-COPY templates/ /work/templates/
-COPY static/ /work/static/
-
 RUN apt update -y && apt install build-essential -y
+
+COPY library/ /work/library/
+COPY dashboard/ /work/dashboard/
+WORKDIR /work/dashboard
 RUN pip install -r requirements.txt
 
 ENTRYPOINT ["uvicorn"]
