update kubernetes config

--- a/kubernetes/crawler.yml
+++ b/kubernetes/crawler.yml
@@ -1,26 +1,27 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dashboard
+  name: crawler
 spec:
   replicas: 1
   selector:
     matchLabels:
-      ecoman: dashboard
+      ecoman: crawler
   template:
     metadata:
       labels:
-        ecoman: dashboard
+        ecoman: crawler
     spec:
       containers:
-        - name: dashboard-container
-          image: cdsl-research/ecoman/dashboard:v2.0.0
+        - name: crawler-container
+          image: cdsl-research/ecoman/crawler:v2.0.0
           volumeMounts:
+            - name: privkey-volume
+              mountPath: /keys
+              readOnly: true
             - name: hosts-config-volume
               mountPath: /config
               readOnly: true
-          ports:
-            - containerPort: 8000
           env:
             - name: MONGO_USER
               value: mongo
@@ -28,25 +29,16 @@ spec:
               value: password
             - name: MONGO_HOST
               value: mongo-service
-            - name: EXECUTOR_ADDRESS
-              value: executor-service
             - name: HOSTS_PATH
               value: /config/hosts.yaml
       volumes:
+        - name: priv-key-volume
+          secret:
+            secretName: priv-key
+            items:
+              - key: id_rsa
+                path: id_rsa
+                mode: 0400
         - name: hosts-config-volume
           configMap:
             name: hosts-config
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: dashboard-svc
-spec:
-  type: NodePort
-  ports:
-    - name: "http-port"
-      protocol: "TCP"
-      port: 8000
-      targetPort: 8000
-  selector:
-    ecoman: dashboard
