--- a/kubernetes/dashboard.yml
+++ b/kubernetes/dashboard.yml
@@ -31,7 +31,7 @@ spec:
             - name: EXECUTOR_ADDRESS
               value: executor-service
             - name: HOSTS_PATH
-              value: /config/hosts.yaml
+              value: /config/hosts.example.yaml
       volumes:
         - name: hosts-config-volume
           configMap:
