--- a/kubernetes/crawler.yml
+++ b/kubernetes/crawler.yml
@@ -24,13 +24,13 @@ spec:
               readOnly: true
           env:
             - name: MONGO_USER
-              value: mongo
+              value: root
             - name: MONGO_PASSWORD
               value: password
             - name: MONGO_HOST
               value: mongo-service
             - name: HOSTS_PATH
-              value: /config/hosts.yaml
+              value: /config/hosts.yml
       volumes:
         - name: privkey-volume
           secret:
