--- a/kubernetes/mongodb.yml
+++ b/kubernetes/mongodb.yml
@@ -9,6 +9,8 @@ spec:
   selector:
     matchLabels:
       db: mongo
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -21,8 +23,6 @@ spec:
           ports:
             - containerPort: 27017
           env:
-            - name: MONGO_INITDB_ROOT_USERNAME
-              value: mongo
             - name: MONGO_INITDB_ROOT_PASSWORD
               value: password
           volumeMounts:
