--- a/kubernetes/mongodb.yml
+++ b/kubernetes/mongodb.yml
@@ -23,8 +23,13 @@ spec:
           ports:
             - containerPort: 27017
           env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              value: mongo
+            # You shoud use SECRET
             - name: MONGO_INITDB_ROOT_PASSWORD
               value: password
+            - name: MONGO_INITDB_DATABASE
+              value: ecoman
           volumeMounts:
             - name: mongo-volv
               mountPath: /data/db
@@ -65,5 +70,4 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
-
 
