--- a/kubernetes/executor.yml
+++ b/kubernetes/executor.yml
@@ -42,7 +42,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: executor-svc
+  name: executor-service
 spec:
   ports:
     - name: "http-port"
