--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -1,20 +1,27 @@
 name: Format python code
 on: push
 jobs:
-  autopep8:
+  python-code-format:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: autopep8
-        uses: peter-evans/autopep8@v1
-        with:
-          args: --recursive --in-place --aggressive --aggressive .
+      - uses: actions/setup-python@v4
+      - name: Display Python version
+        run: python --version
+      - name: Install packages
+        run: pip install black autopep8 isort
+      - name: Formatter
+        run: |
+          black .
+          autopep8 --recursive --in-place --aggressive --aggressive .
+          isort .
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: autopep8 action fixes
-          title: Fixes by autopep8 action
-          body: This is an auto-generated PR with fixes by autopep8.
-          labels: autopep8, automated pr
+          commit-message: Auto code format
+          title: Fixes by format action
+          body: This is an auto-generated PR with fixes.
+          labels: automated pr
           reviewers: peter-evans
-          branch: autopep8-patches
+          branch: python-code-format-patches
