--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -6,6 +6,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+          architecture: "x64"
       - name: Display Python version
         run: python --version
       - name: Install packages
